--- a/SportsStore/package.json
+++ b/SportsStore/package.json
@@ -6,6 +6,9 @@
   "dependencies": {
     "bootstrap": "^4.0.0",
     "jquery": "^3.3.1",
+    "jquery-validation": "1.17.0",
+    "jquery-validation-unobtrusive": "3.2.9",
+    "font-awesome": "4.7.0",
     "webpack": "^4.2.0"
   },
   "devDependencies": {},
